--- a/scss/bootstrap-night.scss
+++ b/scss/bootstrap-night.scss
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v5.0.2 (https://getbootstrap.com/)
+ * Bootstrap v5.x.x (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
@@ -19,8 +19,6 @@
 @import "dark/patch";  // missing from BS, unsupported patch/hack
 
 :root { color-scheme: dark; }  // TODO: this should be code based.
-
-// stylelint-disable no-invalid-position-at-import-rule
 
 // Layout & components
 @import "root";
@@ -53,6 +51,7 @@
 @import "carousel";
 @import "spinners";
 @import "offcanvas";
+@import "placeholders";
 
 // Helpers
 @import "helpers";
