--- a/scss/bootstrap-unlit.scss
+++ b/scss/bootstrap-unlit.scss
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v5.0.2 (https://getbootstrap.com/)
+ * Bootstrap v5.x.x (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
@@ -14,7 +14,6 @@
 @import "functions";
 @import "variables";  // defaults are here
 @import "variables-alt";  // dark color set is here
-@import "dark/unlit-temp";  // pre-release keep-up variables, only needed for "unlit" variant
 @import "dark/variables-map-core-to-temp";  // map the core colors to `-temp` placeholders
 @import "dark/variables-map-alt-to-core";  // map the `-alt`'s back to core colors
 @import "dark/variables-map-temp-to-alt";  // map the `-temp`'s back to the `-alt`'s, in effect swapping them
@@ -59,6 +58,7 @@ $default-color-scheme: dark;
 @import "carousel";
 @import "spinners";
 @import "offcanvas";
+@import "placeholders";
 
 // Helpers
 @import "helpers";
@@ -71,8 +71,6 @@ $default-color-scheme: dark;
  */
 
 @include color-scheme-alt(alternative-color-scheme($default-color-scheme)) {
-
-  // xxx-stylelint-disable no-invalid-position-at-import-rule
 
   // Layout & components
   @import "dark/root";
@@ -105,6 +103,7 @@ $default-color-scheme: dark;
   @import "dark/carousel";
   // no colors in spinners
   @import "dark/offcanvas";
+  @import "dark/placeholders";
 
   // Helpers
   @import "dark/helpers";
