--- a/scss/bootstrap-blackbox.scss
+++ b/scss/bootstrap-blackbox.scss
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v5.0.2 (https://getbootstrap.com/)
+ * Bootstrap v5.x.x (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
@@ -21,8 +21,6 @@
 @import "utilities";
 @import "dark/utilities";
 @import "dark/patch";  // missing from BS, unsupported patch/hack
-
-// stylelint-disable no-invalid-position-at-import-rule
 
 :root { color-scheme: light; }
 
@@ -57,6 +55,7 @@
 @import "carousel";
 @import "spinners";
 @import "offcanvas";
+@import "placeholders";
 
 // Helpers
 @import "helpers";
@@ -99,6 +98,7 @@
   @import "dark/popover";
   @import "dark/carousel";
   @import "dark/offcanvas";
+  @import "dark/placeholders";
 
   // Helpers
   @import "dark/helpers";
