--- a/scss/bootstrap-dark.scss
+++ b/scss/bootstrap-dark.scss
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v5.0.2 (https://getbootstrap.com/)
+ * Bootstrap v5.x.x (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
@@ -52,6 +52,7 @@
 @import "carousel";
 @import "spinners";
 @import "offcanvas";
+@import "placeholders";
 
 // Helpers
 @import "helpers";
@@ -64,8 +65,6 @@
  */
 
 @include color-scheme-alt(alternative-color-scheme($default-color-scheme)) {
-
-  // stylelint-disable no-invalid-position-at-import-rule
 
   // Layout & components
   @import "dark/root";
@@ -98,6 +97,7 @@
   @import "dark/carousel";
   // no colors in spinners
   @import "dark/offcanvas";
+  @import "dark/placeholders";
 
   // Helpers
   @import "dark/helpers";
