--- a/scss/bootstrap-nightshade.scss
+++ b/scss/bootstrap-nightshade.scss
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v5.0.2 (https://getbootstrap.com/)
+ * Bootstrap v5.x.x (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
@@ -22,8 +22,6 @@
 @import "dark/patch";  // missing from BS, unsupported patch/hack
 
 :root { color-scheme: light; }
-
-// stylelint-disable no-invalid-position-at-import-rule
 
 // Layout & components
 @import "root";
@@ -56,6 +54,7 @@
 @import "carousel";
 @import "spinners";
 @import "offcanvas";
+@import "placeholders";
 
 // Helpers
 @import "helpers";
@@ -98,6 +97,7 @@
   @import "dark/popover";
   @import "dark/carousel";
   @import "dark/offcanvas";
+  @import "dark/placeholders";
 
   // Helpers
   @import "dark/helpers";
