--- a/scss/dark/_variables-map-alt-to-core.scss
+++ b/scss/dark/_variables-map-alt-to-core.scss
@@ -54,7 +54,9 @@ $body-color:                                  $body-color-alt;
 
 // --- Utilities maps ---
 $utilities-colors:                            $utilities-colors-alt;
+$utilities-text:                              $utilities-text-alt;
 $utilities-text-colors:                       $utilities-text-colors-alt;
+$utilities-bg:                                $utilities-bg-alt;
 $utilities-bg-colors:                         $utilities-bg-colors-alt;
 
 // --- Links ---
@@ -420,4 +422,4 @@ $pre-color:                                   $pre-color-alt;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Wed Aug 04 2021 20:01:12 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Thu Aug 12 2021 11:18:08 GMT+1000 (Australian Eastern Standard Time)
