--- a/scss/dark/_variables-map-core-to-temp.scss
+++ b/scss/dark/_variables-map-core-to-temp.scss
@@ -54,7 +54,9 @@ $body-color-temp-dnu:                                  $body-color;
 
 // --- Utilities maps ---
 $utilities-colors-temp-dnu:                            $utilities-colors;
+$utilities-text-temp-dnu:                              $utilities-text;
 $utilities-text-colors-temp-dnu:                       $utilities-text-colors;
+$utilities-bg-temp-dnu:                                $utilities-bg;
 $utilities-bg-colors-temp-dnu:                         $utilities-bg-colors;
 
 // --- Links ---
@@ -420,4 +422,4 @@ $pre-color-temp-dnu:                                   $pre-color;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Wed Aug 04 2021 20:01:12 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Thu Aug 12 2021 11:18:08 GMT+1000 (Australian Eastern Standard Time)
