--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -335,18 +335,27 @@ $body-color-alt:                $gray-100-alt !default;  // $gray-900 !default;
 // Utilities maps
 // ______________________________________
 
-$utilities-colors-alt: map-merge(
-  $theme-colors-rgb-alt,
+$utilities-colors-alt: $theme-colors-rgb-alt !default;
+
+$utilities-text-alt: map-merge(
+  $utilities-colors-alt,
   (
     "black": to-rgb($black-alt),
     "white": to-rgb($white-alt),
-    "body":  to-rgb($body-color-alt)
+    "body": to-rgb($body-color-alt)
   )
 ) !default;
+$utilities-text-colors-alt: map-loop($utilities-text-alt, rgba-css-var, "$key", "text") !default;
 
-$utilities-text-colors-alt: map-loop($utilities-colors-alt, rgba-css-var, "$key", "text") !default;
-
-$utilities-bg-colors-alt: map-loop($utilities-colors-alt, rgba-css-var, "$key", "bg") !default;
+$utilities-bg-alt: map-merge(
+  $utilities-colors-alt,
+  (
+    "black": to-rgb($black-alt),
+    "white": to-rgb($white-alt),
+    "body": to-rgb($body-bg-alt)
+  )
+) !default;
+$utilities-bg-colors-alt: map-loop($utilities-bg-alt, rgba-css-var, "$key", "bg") !default;
 
 
 // Links
