--- a/scss/dark/_variables-map-temp-to-alt.scss
+++ b/scss/dark/_variables-map-temp-to-alt.scss
@@ -54,7 +54,9 @@ $body-color-alt:                                  $body-color-temp-dnu;
 
 // --- Utilities maps ---
 $utilities-colors-alt:                            $utilities-colors-temp-dnu;
+$utilities-text-alt:                              $utilities-text-temp-dnu;
 $utilities-text-colors-alt:                       $utilities-text-colors-temp-dnu;
+$utilities-bg-alt:                                $utilities-bg-temp-dnu;
 $utilities-bg-colors-alt:                         $utilities-bg-colors-temp-dnu;
 
 // --- Links ---
@@ -420,4 +422,4 @@ $pre-color-alt:                                   $pre-color-temp-dnu;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Wed Aug 04 2021 20:01:12 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Thu Aug 12 2021 11:18:08 GMT+1000 (Australian Eastern Standard Time)
