--- a/scss/bootstrap-night.scss
+++ b/scss/bootstrap-night.scss
@@ -6,7 +6,7 @@
  *
  * Bootstrap-Night (https://vinorodrigues.github.io/bootstrap-dark-5/)
  * Copyright 2020-2021 Vino Rodrigues
- * This version is a fullfledged dark theme
+ * This version is a fully fledged dark theme
  */
 
 // Configuration
