--- a/scss/bootstrap-blackbox.scss
+++ b/scss/bootstrap-blackbox.scss
@@ -22,7 +22,9 @@
 @import "dark/utilities";
 @import "dark/patch";  // missing from BS, unsupported patch/hack
 
-:root { color-scheme: light; }
+$define-legacy-body-colors: true;  // !!!! fix for issue #31
+
+// :root { color-scheme: light; }  // !!!! fix for issue #31, do not set
 
 // Layout & components
 @import "root";
@@ -69,10 +71,10 @@
 
 @include color-scheme-alt("[data-bs-color-scheme=\"dark\"]") {
 
-  :root { color-scheme: dark; }
+  // :root { color-scheme: dark; }  // !!!! fix for issue #31, do not set
 
   // Layout & components
-  @import "dark/root";
+  // @import "dark/root";  // !!!! fix for issue #31, do not use `dark/root`
   @import "dark/reboot";
   @import "dark/type";
   @import "dark/images";
