attempt to fix for issue #35

--- a/scss/bootstrap-colors.scss
+++ b/scss/bootstrap-colors.scss
@@ -10,6 +10,7 @@
  */
 
 @import "functions";
+@import "dark/functions";
 @import "variables";  // defaults are here
 @import "variables-alt";  // dark color set is here
 @import "mixins";
