--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -345,7 +345,7 @@ $utilities-text-alt: map-merge(
     "body": to-rgb($body-color-alt)
   )
 ) !default;
-$utilities-text-colors-alt: map-loop($utilities-text-alt, rgba-css-var, "$key", "text") !default;
+$utilities-text-colors-alt: map-loop($utilities-text-alt, rgba-css-var-alt, "$key", "text") !default;  // hack for issue #35
 
 $utilities-bg-alt: map-merge(
   $utilities-colors-alt,
@@ -355,7 +355,7 @@ $utilities-bg-alt: map-merge(
     "body": to-rgb($body-bg-alt)
   )
 ) !default;
-$utilities-bg-colors-alt: map-loop($utilities-bg-alt, rgba-css-var, "$key", "bg") !default;
+$utilities-bg-colors-alt: map-loop($utilities-bg-alt, rgba-css-var-alt, "$key", "bg") !default;  // hack for issue #35
 
 
 // Links
