--- a/scss/bootstrap-night.scss
+++ b/scss/bootstrap-night.scss
@@ -11,6 +11,7 @@
 
 // Configuration
 @import "functions";
+@import "dark/functions";
 @import "variables";  // defaults are here
 @import "variables-alt";  // dark color set is here
 @import "dark/variables-map-alt-to-core";  // map the `-alt`'s back to core colors
