--- a/scss/bootstrap-nightfall.scss
+++ b/scss/bootstrap-nightfall.scss
@@ -12,6 +12,7 @@
 
 // Configuration
 @import "functions";
+@import "dark/functions";
 @import "variables";  // defaults are here
 @import "variables-alt";  // dark color set is here
 @import "mixins";
