--- a/scss/bootstrap-dark-plugin.scss
+++ b/scss/bootstrap-dark-plugin.scss
@@ -4,7 +4,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  *
- * Bootstrap-Dark-Plugin (https://vinorodrigues.github.io/bootstrap-dark-5/)
+ * Bootstrap-Dark-plugin (https://vinorodrigues.github.io/bootstrap-dark-5/)
  * Copyright 2020-2021 Vino Rodrigues
  * This version is a dual color theme, but as a plugin
  * Include both bootstrap.css and this file and darkmode is optioned in by a
